ing_svc_public/harbor-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: harbor
  name: harbor
subsets:
- addresses:
  - ip: 192.168.50.87
  ports:
  - name: https
    port: 443
    protocol: TCP
