ing_svc_public/harbor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
  name: harbor
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ClusterIP
