ing_svc_public/ceph_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: ceph-mgr
spec:
  rules:
  - host: ceph-mgr.cluster.dfwsgroup.cn
    http:
      paths:
      - backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
        path: /
