ing_svc_public/harbor-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: harbor
spec:
  rules:
  - host: docker-registry.cluster.dfwsgroup.cn
    http:
      paths:
      - backend:
          serviceName: harbor
          servicePort: 443
        path: /
